fix card small Style and flex Wrap. add some Box-shadow and Border:hover effect

--- a/style.css
+++ b/style.css
@@ -49,8 +49,9 @@
 .pokedex-container {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     margin: 10px;
+    flex-wrap: wrap;
 }
 
 
@@ -58,7 +59,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: nowrap;
     height: calc(100vh - 100px);
+
 }
 
 
@@ -86,8 +89,18 @@
 .pokedex-content-small {
     border-radius: 20px;
     width: var(--big-crad-witdh);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
+    border: 2px solid rgba(0, 0, 0, 0);
     height: 200px;
     overflow: hidden;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.pokedex-content-small:hover {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
+    border: 2px solid rgba(0, 0, 0, 0.3);
 }
 
 
